--- a/package.json
+++ b/package.json
@@ -7,13 +7,12 @@
   "scripts": {
     "build": "tsc -p ./tsconfig.json",
     "start": "MONGO_URL=mongodb+srv://devuser:qwerty123@cluster0.n3gup.mongodb.net/dev2048 node ./build",
-    "dev": "npm run start-db && cross-env NODE_ENV=development npm run dev:clean && nodemon -w src -e ts --exec \"npm run dev:build && npm run dev:start\"",
-    "start-db": "docker-compose -f scripts/mongodb.compose.yml up -d",
+    "dev": "cross-env NODE_ENV=development npm run dev:clean && nodemon -w src -e ts --exec \"npm run dev:build && npm run dev:start\"",
     "prettier": "prettier --loglevel warn --write \"src/**/*.{ts,tsx}\"",
     "lint": "tslint --fix -c tslint.json -t stylish -p ./tsconfig.json",
     "dev:clean": "rimraf build",
     "dev:build": "tsc --incremental -p tsconfig.json",
-    "dev:start": "MONGO_URL=mongodb://Antonina:102030@127.0.0.1/dev2048 node --inspect -r source-map-support/register -r dotenv/config build/index.js"
+    "dev:start": "MONGO_URL=mongodb+srv://devuser:qwerty123@cluster0.n3gup.mongodb.net/dev2048 node --inspect -r source-map-support/register -r dotenv/config build/index.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
